???? 0.9.18.8

    user visible changes, client:
    * New command gui client mode.
    * disabled gui command when instl is compiled, since PuInstaller cannot find the frameworks required by Tkinter.

    user visible changes, admin:
    * Implemented --limit option to svn2stage
    * Added quoted string handling to --limit options of svn2stage and stage2svn
    * mac OS mkdir_with_owner batch file function now sets only user id for new directory not group id.    programmer visible changes:
    * New util function unquoteme sister to quoteme_single & quoteme_double
    * Added --run to some admin commands

    programmer visible changes:
    * New methods: ConfigVarList.unresolved_var &  ConfigVarList.unresolved_var_to_list.
    * ConfigVarStack.repr_for_yaml new parameter resolve, so we can write var list to yaml without resolving. Default is resolve=True.

5/11 0.9.18.6

    user visible changes, client:
    * New optional variable INSTL_MINIMAL_VERSION will be compared to current instl version,
        raise exception if INSTL_MINIMAL_VERSION > __INSTL_VERSION__. Can be used to check
        compatibility between input file and instl reading it.
    * Improved removal of !dir_cont and !files sources.

4/11/2014 0.9.18.4

    user visible changes, client:
    * Enabled the removal of !dir_cont and !files sources.
    * Reading a user config file if such file exists. User config file named
        instl_config.yaml can be placed in the home folder,
        format is regular instl !define format.
        File name is in variable __USER_CONFIG_FILE_NAME__.
    * Better error message when public key cannot be determined.

    programmer visible changes:
    * Fixed the regex to find wtar versions of files to handle spaces in file names.

2/11/2014 0.9.18.1

    * It's possible now to install sources from any folder regardless of OS. This mainly enables the uses
        of Common folder in the same level of Win and Mac.

    user visible changes, client: