@@ -26,7 +26,7 @@ __GUI_CONFIG_FILE_VARS__:
   - ADMIN_GUI_CONFIG_FILE
   - ADMIN_GUI_OUTPUT_FILE
   - ADMIN_GUI_RUN_BATCH_FILE
-  - ADMIN_GUI_LIMIT_PATH
+  - ADMIN_GUI_LIMIT
 
 --- !define
 
@@ -35,7 +35,7 @@ CLIENT_GUI_INPUT_FILE:  $(CLIENT_GUI_COMMAND).yaml
 CLIENT_GUI_RUN_BATCH_FILE: no
 ADMIN_GUI_CONFIG_FILE: ""
 ADMIN_GUI_RUN_BATCH_FILE: yes
-ADMIN_GUI_LIMIT_PATH: ""
+ADMIN_GUI_LIMIT: ""
 
 --- !define_Mac
 
