@@ -47,7 +47,7 @@ class CopyToolBase(object):
         pass
 
     @abc.abstractmethod
-    def copy_dir_contents_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None):
+    def copy_dir_contents_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None, preserve_dest_files=True):
         """ Copy the contents of src_dir into trg_dir.
             Example: copy_dir_contents_to_dir("a", "/d/c/b") copies
             everything from a into "/d/c/b"
@@ -134,15 +134,18 @@ class CopyToolRsync(CopyToolBase):
             sync_command = "rsync --owner --group -l -r -E {ignore_spec} \"{src_file}\" \"{trg_file}\"".format(**locals())
         return sync_command
 
-    def copy_dir_contents_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None):
+    def copy_dir_contents_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None, preserve_dest_files=True):
         if not src_dir.endswith("/"):
             src_dir += "/"
         ignore_spec = self.create_ignore_spec(ignore)
+        delete_spec = ""
+        if not preserve_dest_files:
+            delete_spec = "--delete"
         if link_dest:
             relative_link_dest = os.path.relpath(src_dir, trg_dir)
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync --owner --group -l -r -E {delete_spec} {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync --owner --group -l -r -E {delete_spec} {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         return sync_command
 
     def copy_dir_files_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None):
